Add English support

--- a/template.tex
+++ b/template.tex
@@ -140,6 +140,16 @@ URLは\url{https://www.siggraph.org/}のように記載する.
 のように変更すれば良い.
 このオプションを使用することで, 著者名(\textsf{authors}環境および\textsf{plainauthors}環境で記入した内容)が自動的に``Anonymous Authors''に差し変わり, また著者所属およびメールアドレスが非表示になる.
 
+\subsection{English Support}
+
+\noindent
+This template is mainly targeted at the Japanese language, but it also provides an option to support manuscripts fully written in English.
+This support can be enabled by passing \textsf{english} as the class option; that is, put
+\begin{verbatim}
+\documentclass[english]{vc}
+\end{verbatim}
+at the beginning of the source code.
+
 \subsection{Overleaf環境での使用}
 
 本テンプレートはローカル環境での使用に加えてオンライン環境の一つであるOverleaf\footnote{\url{https://www.overleaf.com/}}での使用もサポートしている.
