Adjust sample content

--- a/template.tex
+++ b/template.tex
@@ -143,7 +143,7 @@ URLは\url{https://www.siggraph.org/}のように記載する.
 \subsection{English Support}
 
 \noindent
-This template is mainly targeted at the Japanese language, but it also provides an option to support manuscripts fully written in English.
+This template is targeted at the Japanese language, but it also provides an option to support English manuscripts.
 This support can be enabled by passing \textsf{english} as the class option; that is, put
 \begin{verbatim}
 \documentclass[english]{vc}
