Set the anonymous option by default

--- a/template.tex
+++ b/template.tex
@@ -1,7 +1,8 @@
 % クラスファイルの読み込み
-% Note: 投稿時には著者情報を削除するためにanonymousオプションを使用することもできる
-% \documentclass[anonymous]{vc}
-\documentclass{vc}
+% Note: 投稿時に著者情報を削除するため，次のようにanonymousオプションを使用しても良い
+\documentclass[anonymous]{vc}
+% Note: カメラレディ提出時には著者情報を表示するため，次のようにanonymousオプションを使用しないようにする
+% \documentclass{vc}
 
 % タイトルの定義（最初のページの上部に出力されるほか、PDFのメタデータとしても利用される）
 \title{Visual Computing論文テンプレート}
