Update the package list

--- a/template.tex
+++ b/template.tex
@@ -126,7 +126,8 @@ URLは\url{https://www.siggraph.org/}のように記載する．
 \textsf{natbib},
 \textsf{bxpapersize},
 \textsf{environ},
-\textsf{titlesec}.
+\textsf{titlesec},
+\textsf{indentfirst}.
 
 \subsection{投稿時の著者情報の削除}
 
