--- a/vc-template.tex
+++ b/vc-template.tex
@@ -172,6 +172,6 @@ Overleafで使用する場合，まず``New Project''メニュー下にある``U
 バグ報告や改善提案などはGitHubを通して誰でも行うことができる．
 
 \bibliographystyle{IEEEtran}
-\bibliography{template.bib}
+\bibliography{vc-template.bib}
 
 \end{document}
